name:                state-codes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/acamino/state-codes#README
license:             BSD3
license-file:        LICENSE
author:              Agustin Camino
maintainer:          agustin.camino@gmail.com
copyright:           2017 Agustin Camino
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable state-codes
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
