name:                state-codes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/acamino/state-codes#README
license:             BSD3
license-file:        LICENSE
author:              Agustin Camino
maintainer:          agustin.camino@gmail.com
copyright:           2017 Agustin Camino
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


library
  hs-source-dirs:   src
  build-depends:
      base                 >= 4.7  && < 5
    , text
    , aeson
    , shakespeare
  ghc-options:      -Wall -Werror
  other-modules:    Data.StateCodes.ISO31662US
  exposed-modules:  Data.StateCodes
  default-language: Haskell2010
