name:                state-codes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/acamino/state-codes#README
license:             BSD3
license-file:        LICENSE
author:              Agustin Camino
maintainer:          agustin.camino@gmail.com
copyright:           2017 Agustin Camino
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


library
  hs-source-dirs:   src
  build-depends:
      base                 >= 4.7  && < 5
    , text
    , aeson
    , shakespeare
  ghc-options:      -Wall -Werror
  other-modules:    Data.StateCodes.ISO31662US
  exposed-modules:  Data.StateCodes
  default-language: Haskell2010

test-suite state-codes-test
  main-is:          Spec.hs
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  other-modules:    Data.StateCodesSpec

  build-depends:    base                   >= 4.7   && < 5.0
                  , aeson
                  , hspec
                  , optparse-applicative
                  , QuickCheck
                  , state-codes
                  , text

  ghc-options:      -Wall -Werror
  default-language: Haskell2010
